# 0.00.03 (46334) Nov 18, 2010
Fixed: Multiple clocks are running, caused by wiring up to new clock control panel
Fixed: Second tab clock always running
Fluid-flow: Fixed locations of sensors on startup so they display good initial values
Fluid-flow: Fixed crash on reset all
Show 0.9999 atm when lifted into the atmosphere so students don't think pressure doesn't decrease vs altitude
Fluid-flow: Moved grab handles to front layer
Fluid-flow: Restart clock on reset
Fluid-flow: Fixed: Reset all crashes the sim if particles are present
# 0.00.02 (46303) Nov 17, 2010
# 0.00.01 (46300) Nov 17, 2010
Fluid-flow: Added clock controls to play area
Fluid-flow: Fixed: Velocity and pressure sensor should use the same model as is used for particles velocity
Fluid-flow: Fixed: Shouldn't be able to drag pipe control points within a threshold distance of each other
Fluid-flow: Added images for dropper and bucket
Fluid-flow: Added a ruler
Fluid-flow: Moved reset all button to bottom right so it doesn't overlap the pipe
Added a ruler with English units
Centered pipe on flow tab
Added reset all
Fixed: Pressure gauges should read "?" when underground
Fixed: Gravity slider should have correct title and units
Fixed: Gravity slider should be minimizable
Fixed: pressure gauges should read values in the pipe
Fixed: pressure gauges should read atmosphere when in atmosphere
Fixed: pressure gauges should update when pipe change
Added units for meters/feet
Hid pipe entry points to left and right for when sim is shortened vertically
Centered pressure readouts
Increased hotspot size on pressure readouts
Added a "10 ft" label inside the pool
Converted circles to double-headed arrows for pipe control nodes
Improved pressure units and readout
Added initial support for different units
Added a gravity control
Added particle model for food coloring
Added labels and tick marks to density slider
Added an arrow node to velocity sensor
Initial version of fluid pressure and flow sim